--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 .container{
     width: 100%;
     height: 100vh;
+    max-height: 100vh;
     background-color: black;
  
 }
@@ -29,6 +30,7 @@
 
 .d-flex{
     display: flex;
+    align-content: center;
 }
 
 .wrap{
@@ -73,4 +75,48 @@
     padding: 4px;
     background-color: grey;
     border-radius: 10%;
+}
+
+li{
+    color: white;
+    padding: 7px;
+}
+
+ul{
+    list-style: none;
+}
+
+.container-flex{
+    width: calc(100% / 3);
+}
+
+.icon{
+    text-align: center;
+    font-size: 30px;
+}
+
+.flex-start{
+    justify-content: flex-start;
+}
+
+.flex-end{
+    justify-content: flex-end;
+}
+
+.end{
+    text-align: center;
+    line-height: 80px;
+    color: red;
+}
+
+.end-call{
+    background-color: grey;
+}
+
+.arrow{
+    padding-top: 50%;
+} 
+
+#share{
+    color: greenyellow;
 }
