--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@
     height: calc(100vh - 80px);
     margin-left: 40px;
     margin-right: 40px;
+    padding: 50px 50px 10px 50px;
 }
 
 .playbar{
